--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ pdfminer.six
 
 flask
 pathlib
-shutils
 streamlit
 
 
@@ -14,6 +13,14 @@ pywebview>=4.0.0  # Pour le mode application native
 
 pandas>=2.0.0
 jinja2>=3.0.0
+
+# === IA / OCR / PDF ===
+requests>=2.31.0
+pypdf>=4.2.0
+pdf2image>=1.17.0
+pytesseract>=0.3.10
+Pillow>=10.0.0
+reportlab>=4.0.0
 
 pathlib2>=2.3.0;python_version<"3.4"
 
